# module-2_homework-12

./: main.py  pyproject.toml
migrations/versions/: 276f04c64cff_add_user_id_foreignkey_to_contact.py  28e14335c8cf_second.py  54c97ca48622_init.py  58aec2851445_add_user_model.py  738fa3ebe6e9_third.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/schemas/: users.py
src/services/: auth.py
