[tool.poetry]
name = "homework-12"
version = "0.1.0"
description = ""
authors = ["Denys Kotsiuba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
uvicorn = {extras = ["standart"], version = "0.22.0"}
SQLAlchemy = "2.0.17"
psycopg2-binary = "2.9.6"
alembic = "1.11.1"
fastapi = "^0.99.1"
pydantic = {version = "1.10.10", extras = ["email"]}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptograph"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
